autotests/syntax-tests-simple-refal/tests/positive/positive0.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var Name # Name 'chars' 123 ) Name , ( ) ( [ Name
] ) [ Name e.Var ] e.Var # Name 'chars' 123 < # Name > : , 'chars'
Name : { [ Name [ Name ] Name ] Name = 123 Name ; e.Var , <
> Name : ( e.Var ( # Name Name ) Name ) Name , : = : Name Name
, : = : , : [ Name 'chars' Name ] Name , : = : = ; # Name Name
, : = : = ; 'chars' Name , : = : = ; 123 Name , : = : = ; =
: = ; = ; } : e.Var = : = ; = ; } Name : # Name Name , : = :
= ; = ; } Name { } ; $EXTERN Name , Name ; $ENUM Name , Name
; $EENUM Name , Name ; $SWAP Name , Name ; $ESWAP Name , Name
; $FORWARD Name , Name ; $LABEL Name , Name ; $ENTRY Name {
} 